--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "wp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://senthilmpro.github.io/wp",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
@@ -17,7 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -b master -d build"
+    "deploy": "gh-pages -b gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
